# rss2mastodon

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  start.sh
rss2mastodon/: app.py  sed.py
