[project]
name = "rss2mastodon"
version = "0.1.0"
description = ""
authors = [{ name = "Jeong Arm", email = "kjwonmail@gmail.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
dependencies = [
    "feedparser>=6.0.11,<7",
    "mastodon-py>=1.8.1,<2",
    "schedule>=1.2.2,<2",
    "jinja2>=3.1.2,<4",
]

[project.scripts]
rss2mastodon = "rss2mastodon.app:main"

[dependency-groups]
dev = [
    "flake8>=6.1.0,<7",
    "flake8-import-order>=0.18.2,<0.19",
    "pyright>=1.1.344,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
